# racetools

./: .gitignore  LICENCE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
racetools/: errors.py
racetools/telemetry/pcars/: udp.py
racetools/test/telemetry/pcars/udp/: test_data.py  test_packet_factories.py  test_packet_stream.py  test_struct_defs.py
racetools/util/: types.py
src/racetools/: __init__.py  errors.py
src/racetools/telemetry/pcars/: enums.py  udp.py  views.py
tests/telemetry/pcars/udp/: test_data.py  test_packet_factories.py  test_socket.py  test_struct_defs.py  test_views.py
tests/util/: test_types.py
