[build-system]
requires = ["flit_core~=3.0"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "racetools"
author = "Chris Wright"
author-email = "chris@inkyspider.co.uk"
home-page = "https://github.com/inkychris/racetools"
requires-python = ">=3.9"
description-file = "README.md"

[tool.coverage.run]
command_line = "-m unittest"
parallel = true
branch = true
source = ["racetools", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
show_missing = true
